<resources>
	<string name="app_name">专注禅院</string>
	<string name="start_button">开始</string>
	<string name="continue_button">继续</string>
	<string name="gallery_button">收藏</string>
	<string name="gallery_title">我的收藏</string>
	<string name="gallery_process">解锁进度：%1$d/%2$d</string>
	<string name="start_build_button">开始建造</string>
	<string name="title_activity_my_palace">我的专注禅院</string>
    <string name="share_message">我在专注禅院保持了专注</string>
    <string name="share_chooser_title">请选择分享方式：</string>
    <string name="share_fail">生成分享图失败</string>
    <string name="share_path_fail">生成分享路径失败</string>
	<string name="permission_hint">您需要同意相应权限，以便获取专注度。</string>
    <string name="AD_error">发生未知错误，请检查网络连接。</string>
    <string name="network_time_fail">获取网络日期失败，请检查网络连接</string>
	<string name="palace_back_button">返回</string>
	<string name="palace_content">禅院背景</string>
	<string name="exit_button">退出</string>
	<string name="crush_button">放弃</string>
	<string name="AD_button">加速</string>
	<string name="OK_button">好的</string>
    <string name="confirm_button">确定</string>
	<string name="finish_hint">成功</string>

    <string name="clean_crush_title">花费%1$d专注度来清除废墟？</string>
    <string name="clean_crush_hint">废墟清除后会恢复你原先的建造等级</string>
    <string name="focus_point_not_enough">抱歉，您的专注度不足，点击荷花，离开手机，可以获得新的专注度。</string>
    <string name="max_level_hint">这个部分已经建造到最高等级了。</string>
    <string name="upgrade_flower_title">升级禅院的睡莲？</string>
    <string name="upgrade_house_title">升级禅院？</string>
    <string name="upgrade_stone_title">升级禅院的佛像？</string>
    <string name="upgrade_tree_title">升级禅院的树木？</string>
    <string name="upgrade_luwei_title">升级禅院的鹿威？</string>
    <string name="upgrade_msg">"建造花费%1$d专注度，需要保持%2$d分钟的专注。"</string>
    <string name="build_title">开始建造？</string>
    <string name="focus_title">开始收集专注度？</string>
	<string name="focus_hint">一旦开始保持专注，任何返回桌面、打开其他应用的行为都可能会导致当前的收集或建造行为失败。</string>
    <string name="build_begin_hint">已开始建造，请离开手机一段时间，直到倒计时结束。</string>
    <string name="gain_coin_success_hint">恭喜！你已获得%1$d专注度和%2$d次广告机会。</string>
	<string name="fail_hint">失败</string>
	<string name="point_fail_hint">抱歉，你使用了手机，本次未获得专注度。</string>
    <string name="build_fail_hint">抱歉，你使用了手机，该位置已坍塌，需要花费专注度恢复原有进度。不要灰心，你额外获得%1$d广告次数</string>

	<string name="waiting_hint">保持专注\n升级将在倒计时结束后完成</string>
	<string name="waiting_hint1">自从树叶落在某个伟人的额头上后，\n就成为了专注的象征。</string>
	<string name="waiting_hint2">专注就是一种反抗，是一种以一敌百的反抗。</string>
	<string name="waiting_hint3">任何事物，专注它，就是在创造它！</string>
	<string name="waiting_hint4">全力以赴的专注，使生命凝肃成一种美，一种像雕塑的美。</string>
	<string name="waiting_hint5">现代社会的天才越来越少，就是因为让人分心的东西越来越多，专注力不够，毅力和坚持太难。</string>
	<string name="waiting_hint6">最值得畏惧的对手：从来不关注你，只专注自己业务的每个细节。</string>
	<string name="waiting_hint7">不变的坐姿令他脊柱变形，精确的工艺使他视力受损，但不容分心的专注让他获得了心灵的平静。</string>
	<string name="waiting_hint8">没有专注力的人生,就仿佛大睁着双眼却什么也看不见。</string>
	<string name="waiting_hint9">每个人都会坚持自己的信念，在别人看来是浪费时间。</string>
	<string name="waiting_hint10">有之精力，不能兼收尽取，但得其所欲求者尔。故愿学者每次作一意求之。</string>
	<string name="waiting_hint11">学贵专，不以泛滥为贤。</string>
	<string name="waiting_hint12">性痴，则其志凝；故书痴者文必工，艺痴者技必良。世之落拓而无成者，皆自谓不痴者也。</string>
	<string name="waiting_hint13">读书欲精不欲博，用心欲专不欲杂。</string>
	<string name="waiting_hint14">聪明人会把凡是分散精力的要求置之度外，只专心致志地去学一门，学一门就要把它学好。</string>
	<string name="waiting_hint15">人的思想是了不起。只要专注于某一项事业，那就一定会做出使自己吃惊的成绩来。</string>
	<string name="waiting_hint16">永不放弃！</string>
	<string name="waiting_hint17">专注、热爱、 全心贯注于你所期望的事物上，必有收获。</string>
	<string name="waiting_hint18">成大事不在于力量的大小，而在于能坚持多久。</string>
	<string name="waiting_hint19">蟹六跪而二螯，非蛇鳝之穴无可寄托者，用心躁也。</string>
	<string name="waiting_hint20">要从容地着手去做一件事，但一开始，就要坚持到底。</string>
	<string name="waiting_hint21">取得成就时坚持不懈，要比遭到失败时顽强不屈更重要。</string>
	<string name="waiting_hint22">凝聚起来的意志，足以击穿顽石。</string>

	<string name="gain_coin_hint">保持专注\n倒计时结束后你会获得%1$d专注度</string>
	<string name="countdown_timer">%1$d%2$d:%3$d%4$d:%5$d%6$d</string>
	<string name="number">%1$d</string>
	<string name="coin_bar">%1$d&#160;</string>
	<string name="lotus_title">获取专注度</string>
    <string name="finish_title">恭喜！</string>
	<string name="alert_title">坚持就是胜利！</string>
    <string name="build_alert_msg">如果现在退出，正在建造的部分就会坍塌。</string>
	<string name="focus_alert_msg">如果现在退出，你将无法获得对应的专注度。</string>
	<string name="lotus_msg">使用专注度升级其他位置的物品，\n荷花会逐渐开放。</string>
	<string name="finish_msg">你已经完成了专注禅院的建设，\n点击发光的荷花观看结局。</string>
	<string name="lotus_opt1">远离手机</string>
	<string name="lotus_opt2">分享</string>
	<string name="lotus_opt3">更多专注度</string>
	<string name="lotus_opt3_desc">每保持10分钟专注，就可以获得一次观看广告的机会，观看5s就可随机获得5到15专注度。</string>
    <string name="AD_hint">目前还有%1$d次机会。</string>
    <string name="AD_fail_hint">目前暂无广告，请稍后再试。</string>
    <string name="AD_no_time_hint">您目前没有广告次数，每保持10分钟专注可获得一次。</string>
    <string name="AD_coin_hint">您已观看足够时间，本次获得%1$d专注度。</string>
    <string name="AD_begin_hint">观看5秒即可获得奖励。</string>
    <string name="AD_load_hint">广告已加载完毕，如果没有播放，请再点击一次按钮，不会扣除次数。</string>
    <string name="time_title">选择远离手机的时间，你会获得对应的专注度。</string>
	<string name="time_opt">保持%1$d分钟专注</string>
	<string name="prologue_1">人们从过往的废墟中铭记历史，</string>
	<string name="prologue_2">然后从过往的历史中学会专注。</string>
	<string name="end_1">感谢你完成了这个游戏。</string>
	<string name="end_2">在一次次的专注积累中，</string>
	<string name="end_3">你始终坚持，</string>
	<string name="end_4">终于完成了禅院的全部建造。</string>
	<string name="end_5">相信在真实的生活之中，</string>
	<string name="end_6">你也会取得丰硕的果实。</string>
	<string name="end_7">有缘再会。</string>

    <string name="flower">睡莲</string>
	<string name="flower_title">睡莲&#160;%1$d</string>
	<string name="flower0_desc">千树扫作一番黄</string>
	<string name="flower1_desc">小萍加泛泛 初蒲正离离</string>
	<string name="flower2_desc">筑室兮水中 葺之兮荷盖</string>
	<string name="flower3_desc">间关莺语花底滑\n幽咽流泉水下滩</string>
	<string name="flower4_desc">兴尽晚回舟 误入藕花深处</string>

    <string name="tree">树</string>
	<string name="tree_title">树&#160;%1$d</string>
	<string name="tree0_desc">树木何萧瑟 北风声正悲</string>
	<string name="tree1_desc">一日春光一日深\n眼看芳树绿成阴</string>
	<string name="tree2_desc">岸头树子直如筠\n谁遣相招住水滨</string>
	<string name="tree3_desc">庭有枇杷树 亭亭如盖矣</string>
	<string name="tree4_desc">攀条折其荣 将以遗所思</string>

    <string name="stone">佛像</string>
	<string name="stone_title">佛像&#160;%1$d</string>
	<string name="stone0_desc">荣枯盛衰一瞬梦</string>
	<string name="stone1_desc">爱此一拳石 玲珑出自然</string>
	<string name="stone2_desc">本是后山人 偶坐前堂客</string>
	<string name="stone3_desc">顽然一块石 卧此苔阶碧</string>
	<string name="stone4_desc">石虽不能言 许我为三友</string>

    <string name="house">禅院</string>
    <string name="house_title">禅院&#160;%1$d</string>
	<string name="house0_desc">床头屋漏无干处\n雨脚如麻未断绝</string>
	<string name="house1_desc">斯是陋室 惟吾德馨</string>
	<string name="house2_desc">户庭无尘杂 虚室有余闲</string>
	<string name="house3_desc">玉楼金阙慵归去\n且插梅花醉洛阳</string>
	<string name="house4_desc">忆我故居室 浮光动南轩</string>

    <string name="luwei">鹿威</string>
    <string name="luwei_title">鹿威&#160;%1$d</string>
	<string name="luwei0_desc">落花不语空辞树\n流水无情自入池</string>
	<string name="luwei1_desc">屋下半流水 屋上几青山</string>
	<string name="luwei2_desc">水自竹来兮绿非假借\n风从华过兮香有因缘</string>
	<string name="luwei3_desc">不作东风蝴蝶梦\n短篱流水一家春</string>
	<string name="luwei4_desc">诗成流水上 梦尽落花间</string>

    <string name="lotus">荷花</string>
    <string name="lotus_gallery_title">荷花&#160;%1$d</string>
	<string name="lotus0_desc">溪上新荷初出水\n花房半弄微红</string>
	<string name="lotus1_desc">出淤泥而不染\n濯清涟而不妖</string>
	<string name="lotus2_desc">萍间日彩乱 荷处香风举</string>
	<string name="lotus3_desc">月华当户白 何处递荷香</string>

	<string name="info0">设置与信息</string>
	<string name="info1">新手教学</string>
	<string name="info2">重置游戏</string>
	<string name="info3">音乐：魔王魂</string>
	<string name="info4_1">联系我们/Bug反馈：</string>
	<string name="info4_2">ConcentrateTemple@163.com</string>
    <string name="clear_title">删除记录？</string>
    <string name="clear_message">你目前的进度会被清空</string>
    <string name="clear_success">删除成功</string>
    <string name="clear_fail">删除文件出错，请关闭应用重试</string>
	<string name="exit">退出游戏？</string>
	<string name="cancel">取消</string>
</resources>
