<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <!--<ImageView-->
        <!--android:id="@+id/MainBackground"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:adjustViewBounds="true"-->
        <!--android:src="@drawable/MainBackground"/>-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="50sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"/>

    <Button
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@android:drawable/btn_default"
        android:text="@string/continue_button"
        android:visibility="gone"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@android:drawable/btn_default"
        android:text="@string/start_button"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@android:drawable/btn_default"
        android:text="@string/exit_button"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"/>
</LinearLayout>
