<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blur_background">

    <ImageView
        android:id="@+id/black_cover"
        android:contentDescription="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:alpha="0.6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/coin_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/coin_bar"
            android:textSize="20sp"
            android:textColor="@color/whitesmoke"
            android:layout_weight="0.05"/>

        <TextView
            android:id="@+id/Countdown_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/whitesmoke"
            android:textSize="45sp"
            android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_vertical">

        <ImageView
            android:id="@+id/Pre_Item_pic"
            android:contentDescription="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:adjustViewBounds="true"
            android:layout_marginStart="20dp"
            android:src="@drawable/item_unknown"
            android:layout_weight="2"/>

        <ImageView
            android:id="@+id/Arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:adjustViewBounds="true"
            android:background="@android:drawable/ic_menu_send"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:id="@+id/Item_pic"
            android:contentDescription="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:adjustViewBounds="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/item_unknown"
            android:layout_weight="2"/>

    </LinearLayout>

        <TextView
            android:id="@+id/Item_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gallery_title"
            android:textColor="@color/whitesmoke"
            android:textSize="25sp"
            android:layout_weight="2"/>

        <Button
            android:id="@+id/AD_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_style"
            android:textColor="@color/whitesmoke"
            android:gravity="center"
            android:text="@string/AD_button"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true"/>

        <Button
            android:id="@+id/Crush_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_style"
            android:textColor="@color/whitesmoke"
            android:gravity="center"
            android:text="@string/crush_button"
            android:layout_marginBottom="15dp"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>

</FrameLayout>
